2004-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/data-get:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  releasing gst-plugins 0.8.4

2004-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix download location for yum

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  releasing

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  adding bugs

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/page.xsl:
	* src/htdocs/releases/gstreamer/0.8.5.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/releases.xsl:
	* src/htdocs/releases/text.xsl:
	  add API changes to release notes.
	  preliminary core 0.8.5 release notes.

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.3.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  preparing release

2004-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	  add new milestones

2004-07-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/htdocs/apps/index.xml:
	  added 3rd party apps section

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: <delete if not using a buddy>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.4.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  release notes

2004-07-18  David I. Lehn <dlehn@users.sourceforge.net>
